tests/invalid/Parameter_Invalid_1.whiley
function f(int x, int x) -> int:
    return x
